@@ -679,6 +679,27 @@ public class ZKRMStateStore extends RMStateStore {
   }
 
   @Override
+  public synchronized void removeApplicationAttemptInternal(
+      ApplicationAttemptId appAttemptId)
+      throws Exception {
+    String appId = appAttemptId.getApplicationId().toString();
+    String appIdRemovePath = getNodePath(rmAppRoot, appId);
+    String attemptIdRemovePath = getNodePath(appIdRemovePath,
+        appAttemptId.toString());
+
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Removing info for attempt: " + appAttemptId + " at: "
+          + attemptIdRemovePath);
+    }
+    
+    if (existsWithRetries(attemptIdRemovePath, true) != null) {
+      doDeleteMultiWithRetries(Op.delete(attemptIdRemovePath, -1));
+    } else {
+      LOG.debug("Attempted to delete a non-existing attempt " + attemptIdRemovePath);
+    }
+  }
+
+  @Override
   public synchronized void removeApplicationStateInternal(
       ApplicationStateData  appState)
       throws Exception {
