@@ -25,6 +25,7 @@ import org.apache.hadoop.fs.FileUtil;
 import org.apache.hadoop.yarn.conf.YarnConfiguration;
 import org.apache.hadoop.yarn.server.records.Version;
 import org.apache.hadoop.yarn.server.resourcemanager.rmapp.RMApp;
+import org.apache.hadoop.yarn.server.resourcemanager.rmapp.attempt.RMAppAttempt;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -89,6 +90,12 @@ public class TestLeveldbRMStateStore extends RMStateStoreTestBase {
     LeveldbStateStoreTester tester = new LeveldbStateStoreTester();
     testDeleteStore(tester);
   }
+  
+  @Test(timeout = 60000)
+  public void testRemoveAttempt() throws Exception {
+    LeveldbStateStoreTester tester = new LeveldbStateStoreTester();
+    testRemoveAttempt(tester);
+  }
 
   @Test(timeout = 60000)
   public void testAMTokens() throws Exception {
@@ -134,6 +141,15 @@ public class TestLeveldbRMStateStore extends RMStateStoreTestBase {
         getRMStateStore();
       }
       return stateStore.loadRMAppState(app.getApplicationId()) != null;
+    }
+
+    @Override
+    public boolean attemptExists(RMAppAttempt attempt) throws Exception {
+      if (stateStore.isClosed()) {
+        getRMStateStore();
+      }
+      return stateStore.loadRMAppAttemptState(attempt.getAppAttemptId())
+          != null;
     }
   }
 }
